Переделал логику скачки множества файлов